# schriftlotse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SchriftLotse.command  THIRD_PARTY_MODELS.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  model-smoke.yml  pages.yml  release.yml
docs/: BENCHMARKS.md  index.html
macos/: Info.plist  SchriftLotseApp.m
scripts/: build_macos_app.sh
src/schriftlotse/: __init__.py  __main__.py  app.py  authority.py  benchmarks.py  cli.py  cloud.py  config.py  database.py  domain.py  exports.py  ingest.py  library.py  model_registry.py  ocr.py  pagexml.py  pipeline.py  preprocessing.py  search.py
src/schriftlotse/web/static/: app.js  style.css
src/schriftlotse/web/templates/: index.html
tests/: __init__.py  conftest.py  test_app.py  test_benchmarks.py  test_cloud.py  test_config.py  test_exports.py  test_ingest.py  test_library.py  test_native.py  test_ocr.py  test_pipeline.py  test_preprocessing.py  test_search.py  test_ui_e2e.py
